--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps --no-audit --no-fund",
   "buildCommand": "npm run build"
 }
