--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.30.0",
+    "glass-refraction": "^0.1.0",
     "lucide-react": "^0.562.0",
     "next": "^16.1.6",
     "react": "19.2.3",
