--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cops-electronics-web",
+  "name": "cops-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "framer-motion": "^12.27.3",
+    "framer-motion": "^12.30.0",
+    "glass-refraction": "^0.1.0",
     "lucide-react": "^0.562.0",
-    "next": "16.1.3",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
