chore(monorepo): finalize workspace, ci, docs and package alignment

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cops-web",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,3 +27,4 @@
     "typescript": "^5"
   }
 }
+
