--- a/apps/cotizaciones/package.json
+++ b/apps/cotizaciones/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "cotizaciones",
   "version": "0.1.0",
   "private": true,
   "packageManager": "pnpm@10.0.0",
@@ -72,3 +72,4 @@
     "typescript": "5.7.3"
   }
 }
+
