--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -3,3 +3,8 @@ COTIZACIONES_APP_URL=https://TU-PROYECTO-COTIZACIONES.vercel.app
 
 # Opcional para uso en cliente si luego hace falta
 NEXT_PUBLIC_COTIZACIONES_APP_URL=https://TU-PROYECTO-COTIZACIONES.vercel.app
+
+# URL publica del modulo de tickets (deploy Vercel de apps/tickets)
+# En desarrollo local: http://localhost:3002
+TICKETS_APP_URL=https://TU-PROYECTO-TICKETS.vercel.app
+NEXT_PUBLIC_TICKETS_APP_URL=https://TU-PROYECTO-TICKETS.vercel.app
