New tickets and UI

--- a/apps/tickets/.env.example
+++ b/apps/tickets/.env.example
@@ -1,6 +1,7 @@
 # Local mode (sin Supabase)
 TICKETS_LOCAL_MODE=true
 NEXT_PUBLIC_TICKETS_LOCAL_MODE=true
+TICKETS_DEMO_USERNAME=admin
 TICKETS_DEMO_EMAIL=admin@copselectronics.com
 TICKETS_DEMO_PASSWORD=admin123
 
@@ -8,6 +9,8 @@ TICKETS_DEMO_PASSWORD=admin123
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
-# URLs de las otras apps (opcional)
+# URLs de las otras apps (requeridas para navegacion y SSO)
 WEB_URL=https://cops-platform-web.vercel.app
 COTIZACIONES_URL=https://cops-platform-cotizaciones.vercel.app
+NEXT_PUBLIC_PLATFORM_COTIZACIONES_URL=https://cops-platform-cotizaciones.vercel.app
+PLATFORM_TICKETS_BRIDGE_SECRET=replace-with-the-same-secret-used-in-web
