--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,10 +1,13 @@
 # URL publica del modulo de cotizaciones (deploy Vercel de apps/cotizaciones)
-COTIZACIONES_APP_URL=https://TU-PROYECTO-COTIZACIONES.vercel.app
+COTIZACIONES_APP_URL=https://cops-platform-cotizaciones.vercel.app/
 
 # Opcional para uso en cliente si luego hace falta
-NEXT_PUBLIC_COTIZACIONES_APP_URL=https://TU-PROYECTO-COTIZACIONES.vercel.app
+NEXT_PUBLIC_COTIZACIONES_APP_URL=https://cops-platform-cotizaciones.vercel.app/
 
 # URL publica del modulo de tickets (deploy Vercel de apps/tickets)
 # En desarrollo local: http://localhost:3002
-TICKETS_APP_URL=https://TU-PROYECTO-TICKETS.vercel.app
-NEXT_PUBLIC_TICKETS_APP_URL=https://TU-PROYECTO-TICKETS.vercel.app
+TICKETS_APP_URL=https://cops-platform-tickets.vercel.app
+NEXT_PUBLIC_TICKETS_APP_URL=https://cops-platform-tickets.vercel.app
+
+# Obligatorio para bridge SSO Web -> Tickets (mismo valor en apps/tickets)
+PLATFORM_TICKETS_BRIDGE_SECRET=replace-with-a-long-random-secret
