feat(web): integrate new homepage with loader and rollback flag

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -11,3 +11,6 @@ NEXT_PUBLIC_TICKETS_APP_URL=https://cops-platform-tickets.vercel.app
 
 # Obligatorio para bridge SSO Web -> Tickets (mismo valor en apps/tickets)
 PLATFORM_TICKETS_BRIDGE_SECRET=replace-with-a-long-random-secret
+
+# Home principal: 1 (o vacio) = nueva home, 0 = home anterior (rollback rapido)
+NEXT_PUBLIC_NEW_HOME=1
